[gd_scene load_steps=15 format=3 uid="uid://c66h16u0v8k3f"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_47r36"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerMovement.gd" id="2_6186j"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerCamera.gd" id="3_6j18k"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerCombat.gd" id="4_l5w7b"]
[ext_resource type="PackedScene" uid="uid://c4tkw88e1x5k8" path="res://Weapons/LaserRifle/LaserRifle.tscn" id="5_5h63s"]
[ext_resource type="PackedScene" uid="uid://cp66l314o51t5" path="res://Weapons/PlasmaCannon/PlasmaCannon.tscn" id="6_s48c1"]
[ext_resource type="ArrayMesh" uid="uid://bvgbp5416f407" path="res://Assets/Models/player_arms_placeholder.obj" id="7_vdy77"]
[ext_resource type="AudioStreamWAV" uid="uid://cx68n60b1v3i6" path="res://Assets/Sounds/audio_stream_empty.tres" id="8_g4o4r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6r1k1"]
radius = 0.4
height = 1.8

[sub_resource type="Animation" id="Animation_i72h2"]
resource_name = "ads"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.1, -0.15, -0.2)]
}

[sub_resource type="Animation" id="Animation_q5j36"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_16fgh"]
resource_name = "reload"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.2, -0.4, 0.1), Vector3(-0.2, 0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_v751o"]
resource_name = "sprint"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.05, 0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e708w"]
_data = {
"ads": SubResource("Animation_i72h2"),
"idle": SubResource("Animation_q5j36"),
"reload": SubResource("Animation_16fgh"),
"sprint": SubResource("Animation_v751o")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_47r36")
player_movement_script = ExtResource("2_6186j")
player_camera_script = ExtResource("3_6j18k")
player_combat_script = ExtResource("4_l5w7b")
player_visual_arms_scene = ExtResource("7_vdy77")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_6r1k1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
cull_mask = 1048573
fov = 75.0
near = 0.05

[node name="AimRayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 13
hit_from_inside = true

[node name="GunSocket" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.2, -0.5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D/GunSocket"]
mesh = ExtResource("7_vdy77")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/GunSocket/MeshInstance3D"]
libraries = {
"": SubResource("AnimationLibrary_e708w")
}

[node name="GroundRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.85, 0)
target_position = Vector3(0, -0.1, 0)
collision_mask = 1

[node name="FootstepAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_g4o4r")
volume_db = -10.0
bus = &"SFX"

[node name="WeaponAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_g4o4r")
volume_db = -5.0
bus = &"SFX"

[node name="DryFireAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_g4o4r")
volume_db = -15.0
bus = &"SFX"